# Library-Management-System

./: .gitignore  CMakeLists.txt  LibraryManagementSystem.sln  README.md  Source.cpp
LibraryManagementSystem/: Book.cpp  Book.h  DirectoryDocument.cpp  DirectoryDocument.h  DirectoryUser.cpp  DirectoryUser.h  Document.cpp  Document.h  Faculty.cpp  Faculty.h  Journal.cpp  Journal.h  LibraryManagementSystem.vcxproj  LibraryManagementSystem.vcxproj.filters  Magzine.cpp  Magzine.h  Newspaper.cpp  Newspaper.h  Staff.cpp  Staff.h  Student.cpp  Student.h  Types.cpp  Types.h  User.cpp  User.h
